--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@react-pdf/renderer": "^3.1.12",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "pdfcrowd": "^5.14.0",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.14.2",
     "react-router-guards": "^1.0.2",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.2",
+    "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.13",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "save": "^2.9.0",
-    "socket.io-client": "^4.6.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.7.1",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,10 +52,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "babel-plugin-inline-react-svg": "^2.0.2"
   }
 }
