--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "pdfcrowd": "^5.14.0",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
