--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-transition-group": "^4.4.5",
     "save": "^2.9.0",
     "socket.io-client": "^4.7.1",
-    "web-vitals": "^3.4.0"
+    "web-vitals": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
